--- a/style.scss
+++ b/style.scss
@@ -754,7 +754,7 @@ button:focus, button:active{
   }
 
   &__title-container{
-    margin: 70px auto;
+    margin: 70px 55% 70px 35%;
   }
 
   &__text-container{
